--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<li class="layer" data-depth="0.09"><img id="awan" src="images/awan.png"></li>
 			<li class="layer" data-depth="0.12"><img id="roket" src="images/roket.png"></li>
 			<li class="layer" data-depth="0.42"><img id="burung" src="images/burung.png"></li>
-			<li class="layer transparan" data-depth="0.50"><img id="ampera" src="images/amperpanjang.png"></li>
+			<li class="layer" data-depth="0.50"><img id="ampera" src="images/amperpanjang.png"></li>
 			<li class="layer transparan" data-depth="0.62"><img src="images/comingSoon.png"></li>
 			<li class="layer" data-depth="0.70"><img id="kapal" src="images/kapal.png"></li>
 			<li class="layer" data-depth="0.80"><img id="image7" src="images/banyu.png"></li>
