Easter egg available after 7s

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div id="logo" class="container2">
 		<img id="sharingan" src="images/preloader/mangekyosharingan.png" class="arabesque sharingan">
 		<img src="images/preloader/hmmmm2.png" class="arabesque">
-		<img src="images/preloader/biru.png" class="arabesque second" onclick="shinraTensei()" style="z-index: 999;">
+		<img id="tombol" src="images/preloader/biru.png" class="arabesque second" onclick="shinraTensei()">
 		<img class="arabesque third" src="images/preloader/batik2.png">
 		<img class="arabesque empat" src="images/preloader/ring putus2.png">
 	</div>
