--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
 	<div id="blackHole" class="containermenu depan">
 		<a href="javascript:void(0)" class="menu" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
-			<span class="ease-all">Ini menu</span>
+			<span class="ease-all">Berita</span>
 		</a>
 		<a id="duo" href="javascript:void(0)" class="menu duo" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
-			<span class="ease-all">menu 2</span>
+			<span class="ease-all">Sejarah</span>
 		</a>
 	</div>
 
 	<div id="blackHole2" class="containermenu kanan depan">
 		<a href="javascript:void(0)" class="menu" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
-			<span class="ease-all">Ini menu</span>
+			<span class="ease-all">Kompetisi</span>
 		</a>
 		<a id="duos" href="javascript:void(0)" class="menu duo" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
-			<span class="ease-all">menu 2</span>
+			<span class="ease-all">Linimasa</span>
 		</a>
 	</div>
 
