updated blackhole precision

--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 	<img src="images/bang.webp" alt="" style="opacity: 0; position: fixed;">
 
 	<div id="blackHole" class="containermenu depan">
-		<a href="javascript:void(0)" class="menu" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
+		<a id="berita" href="javascript:void(0)" class="menu" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
 			<span class="ease-all">Berita</span>
 		</a>
-		<a id="duo" href="javascript:void(0)" class="menu duo" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
+		<a id="sejarah" href="javascript:void(0)" class="menu duo" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
 			<span class="ease-all">Sejarah</span>
 		</a>
 	</div>
 
 	<div id="blackHole2" class="containermenu kanan depan">
-		<a href="javascript:void(0)" class="menu" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
+		<a id="kompetisi" href="javascript:void(0)" class="menu" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
 			<span class="ease-all">Kompetisi</span>
 		</a>
-		<a id="duos" href="javascript:void(0)" class="menu duo" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
+		<a id="linimasa" href="javascript:void(0)" class="menu duo" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
 			<img src="images/awan1.png" alt="awan">
 			<span class="ease-all">Linimasa</span>
 		</a>
