Make easter egg availble 7s after page fully loaded

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="js/preloader.js"></script>
 	<script src="js/menujulangittakterbatas.js"></script>
 </head>
-<body id="body">
+<body id="body" onload="prepareEasterEgg()">
 	<audio id="shinratensei" src="audio/shinratensei.mp3"></audio>
 	<audio id="boom" src="audio/boom.mp3"></audio>
 	<audio id="voiceshinratensei" src="audio/voiceshinratensei.mp3"></audio>
