--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
+	<meta property="og:image" content="images/logo.png" />
 
 	<title>TECHPHORIA 2018</title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
