--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 	<meta charset="utf-8">
 	<meta property="og:image" content="https://raw.githubusercontent.com/DinasKoding/techpho/master/images/logo.png" />
+	<link rel="image_src" 
+      type="image/jpeg" 
+      href="https://raw.githubusercontent.com/DinasKoding/techpho/master/images/logo.png" />
 
 	<title>TECHPHORIA 2018</title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
