--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta property="og:title" content="TECHPHORIA 2018" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://dinaskoding.github.io/techpho/
-" />
+	<meta property="og:url" content="https://dinaskoding.github.io/techpho/" />
+	<meta property=”og:description” content="Website resmi Technology Euphoria Universitas Sriwijaya 2018." />
 	<meta property="og:image" content="https://raw.githubusercontent.com/DinasKoding/techpho/master/images/logo.png" />
 	<link rel="image_src" 
       type="image/jpeg" 
