--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 	<meta charset="utf-8">
 	<meta property="og:title" content="TECHPHORIA 2018" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://dinaskoding.github.io/techpho/" />
+	<meta property="og:url" content="http://techphoria.web.id" />
 	<meta property="og:description" content="Website resmi Technology Euphoria Universitas Sriwijaya 2018." />
 	<meta name="description" content="Website resmi Technology Euphoria Universitas Sriwijaya 2018."/>
 	<meta property="og:image" content="https://raw.githubusercontent.com/DinasKoding/techpho/master/images/logo.png" />
-	<link rel="image_src" 
-      type="image/jpeg" 
-      href="https://raw.githubusercontent.com/DinasKoding/techpho/master/images/logo.png" />
-
+	<link rel="image_src" type="image/jpeg" href="https://raw.githubusercontent.com/DinasKoding/techpho/master/images/logo.png" />
+	<link rel="canonical" href="http://techphoria.web.id" />
 	<title>TECHPHORIA 2018</title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
