--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta property="og:url" content="http://techphoria.web.id" />
 	<meta property="og:description" content="Website resmi Technology Euphoria Universitas Sriwijaya 2018." />
 	<meta name="description" content="Website resmi Technology Euphoria Universitas Sriwijaya 2018."/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/imambungo/myimages/master/techpho/logo.png" />
-	<link rel="image_src" type="image/jpeg" href="https://raw.githubusercontent.com/imambungo/myimages/master/techpho/logo.png" />
+	<meta property="og:image" content="https://i.imgur.com/sRwY154.png" />
+	<link rel="image_src" type="image/jpeg" href="https://i.imgur.com/sRwY154.png" />
 	<link rel="canonical" href="http://techphoria.web.id" />
 	<title>TECHPHORIA 2018</title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
