change bang.webp to bang.gif
fix bang animation not showing in firefox by changing bang.webp file to bang.gif

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</div>
 
 	<img id="judul" class="judul depan" src="images/t.png">
-	<img src="images/bang.webp" alt="" style="opacity: 0; position: fixed;">
+	<img src="images/bang.gif" alt="" style="opacity: 0; position: fixed;">
 
 	<div id="blackHole" class="containermenu depan">
 		<a id="berita" href="javascript:void(0)" class="menu" onclick="menujulangittakterbatas('https://imambungo.github.io/pweb2/')">
