fadein awan dimulai setelah halaman diload

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script src="js/preloader.js"></script>
 	<script src="js/menujulangittakterbatas.js"></script>
 </head>
-<body id="body" onload="prepareEasterEgg()">
+<body id="body" onload="loadFunction()">
 	<audio id="shinratensei" src="audio/shinratensei.mp3"></audio>
 	<audio id="boom" src="audio/boom.mp3"></audio>
 	<audio id="voiceshinratensei" src="audio/voiceshinratensei.mp3"></audio>
